feat: add flip effect to homepage images and update custom CSS

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -154,3 +154,40 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+.flip-container {
+  perspective: 1000px;
+}
+
+.flip-container:hover .flipper {
+  transform: rotateY(180deg);
+}
+
+.flip-container,
+.front,
+.back {
+  width: 550px;
+  height: 350px;
+}
+
+.flipper {
+  transition: 0.6s;
+  transform-style: preserve-3d;
+  position: relative;
+}
+
+.front,
+.back {
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.front {
+  z-index: 2;
+  transform: rotateY(0deg);
+}
+
+.back {
+  transform: rotateY(180deg);
+}
